# pokemon-code

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: __init__.py  config.py  exp1_synthetic_validation.py  exp2_residual_unfairness.py  exp3_pareto_frontier.py  exp4_spectral_analysis.py  exp5_fair_representations.py  kernels.py  make_paper_figures.py
experiments/data/: __init__.py  loader.py  synthetic.py
experiments/fairness/: __init__.py  criteria.py  interventions.py
experiments/utils/: __init__.py  plotting.py  stats.py
